Better alignment of popups + fix for failing test

--- a/group_project_v2/public/css/group_project.css
+++ b/group_project_v2/public/css/group_project.css
@@ -158,7 +158,10 @@
     min-width: 500px;
     position: fixed;
     top: 20%;
-    left: 50%;
+    left: 0;
+    right:0;
+    margin-left: auto;
+    margin-right: auto;
     padding-bottom: 0;
 }
 
